# Enginery

./: CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: gate-g4-floor.toml  performance-bounds.toml
docs/: DEPENDENCIES.md  RELEASE_EVIDENCE.md  adapters.md  competitive-capability-matrix.md  dependencies-v0.1.0.md  dependencies-v0.2.0.md  dependencies-v0.3.0.md  design.md  examples.md  ledger-schema.md  migration-sage-dev.md  operations.md  overview.md  pitch.md  recovery-demonstration.md  release-evidence-v0.1.0.md  release-evidence-v0.2.0.md  release-evidence-v0.3.0.md  release-readiness-v0.1.0.md  workflows.md
fixtures/enginery-stage2-fixture/: CHANGELOG.md  README.md  pyproject.toml
fixtures/enginery-stage2-fixture/src/enginery_stage2_fixture/: __init__.py
fixtures/enginery-stage3-local-service/: README.md  app.py
scripts/: adversarial_capability_gate.py  adversarial_merge_ready_gate.py  adversarial_outcome_capture.py  adversarial_policy_gate.py  check_docs_currency.py  check_import_boundaries.py  fault_inject_deployment.py  fault_inject_ledger.py  fault_inject_publication.py  fault_inject_workers.py  full_system_gate.py  generate_ledger_fixture.py  generate_ledger_schema_doc.py  performance_baseline.py  release_gate.py  run_stage2_gate.py  run_stage3_gate.py  stress_plan_scheduler.py  stress_runtime.py  stress_scheduler.py  verify_project_identity.py  verify_published_release.py
scripts/fault_injection/: __init__.py  framework.py
src/enginery/: __init__.py
tests/: conftest.py
tests/application/: test_adapter_types.py  test_delivery_ports.py  test_work_ports.py
tests/capabilities/: test_approval.py  test_lock.py  test_materialize.py  test_resolver.py  test_serialization.py  test_signature.py
tests/cli/: test_capability.py  test_doctor.py  test_gate.py  test_ledger.py  test_outcome.py  test_policy.py  test_stage1.py  test_stage1_request_builder.py  test_stage2.py  test_version.py  test_workspace_inspect.py
tests/domain/: test_artifact.py  test_digests.py  test_factory_change.py  test_ids.py  test_immutable.py  test_incident.py  test_intervention.py  test_node_attempt.py  test_observation.py  test_outcome.py  test_plan_execution.py  test_policy_decision.py  test_run.py  test_serialization.py  test_stack.py  test_state_machine.py  test_transition_coverage.py  test_work_item.py
tests/e2e/: test_issue_to_pr_recovery.py
tests/engine/: test_coordinator.py  test_coordinator_runtime.py  test_fixture_build.py  test_leases.py  test_omp_worker.py  test_plan_execution.py  test_queued_node_fault.py  test_recovery.py  test_release_manifest.py  test_runtime.py  test_supervisor.py
tests/evidence/: test_evaluator.py  test_terminal.py
tests/fixtures/: ledger.db
tests/gate/: test_gate_evaluation.py  test_gate_floor.py  test_gate_status_fixtures.py
tests/governance/: test_adversarial_gates.py
tests/incidents/: test_authority.py  test_hotfix.py  test_service.py
tests/ledger/: conftest.py  test_artifact_store.py  (+12 more)
(+195 files in other folders)
