[project]
name = "enginery"
version = "0.0.0.dev0"
description = "Engineer the system that engineers software."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Mathews-Tom" }]
keywords = ["agentic-engineering", "workflow", "coding-agents", "control-plane"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
armory = ["pyyaml>=6"]

[project.urls]
Homepage = "https://github.com/Mathews-Tom/Enginery"
Repository = "https://github.com/Mathews-Tom/Enginery"
Issues = "https://github.com/Mathews-Tom/Enginery/issues"

[project.scripts]
enginery = "enginery.cli.main:main"

[tool.enginery]
product_name = "Enginery"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enginery"]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
    "types-PyYAML>=6",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["enginery"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = [".", "scripts"]
markers = [
    "provider_smoke: opt-in mutation of the allowlisted external provider fixture",
]
